fix & style: html id names converted to kabab-case & spacing of elements fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@ html {
     scroll-behavior: smooth;
 }
 /*Styling for the social links and navbar*/
-#t-nav {
+#top-navbar {
     border-bottom: black;
     border-style: hidden hidden solid hidden;
     position: fixed;
@@ -14,20 +14,18 @@ html {
     font-style: normal;
     z-index:1;
 }
-#NavCollapse {
+#nav-collapse {
     transition: 0.3s;
 }
 .nav-socials {
     font-size: 1.8rem;
 }
-
 .nav-words {
     font-size: 1.4rem;
 }
 a.nav-link {
     color: black;
 }
-
 a.nav-link:hover {
     color: #53a2be;
     transition: 0.2s;
@@ -38,12 +36,12 @@ a.nav-link:hover {
 }
 
 /*Stylig for the header content*/
-#h-content {
-    margin-top: 60px;
+#header-content {
+    padding-top:100px;
     background-image: linear-gradient(to right, #0a2239, #132e32);
 }
 /*Styling for the header text*/
-#h-writing {
+#header-writing {
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -51,21 +49,6 @@ a.nav-link:hover {
     font-variation-settings: "wdth" 100;
     color: white;
 }
-/*Can't style the scroll prompt properly and as this was beyond the intial scope of the project, I have left it*/
-/*
-/*#scroll-prompt{
-    position: relative;
-    bottom: 10vh;
-    right: auto;
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings: "wdth" 100;
-    color: white;
-    text-align: center;
-}*/
-
 /*About section styling*/
 #about {
     background-image: linear-gradient(to right, #53a2be, #1d84b5);
@@ -78,7 +61,7 @@ a.nav-link:hover {
     padding-top:30px;
 }
 /*About heading styling*/
-#a-heading {
+#about-heading {
     font-family: "Barriecito", system-ui;
     font-weight: 400;
     font-style: normal;
@@ -130,7 +113,7 @@ img.img-fluid.project-img{
 #contact-container{
     height:100%;
 }
-#contact{
+#contact-section{
     background-image: linear-gradient(to right, #53a2be, #1d84b5);
 }
 /*Contact details styling*/
@@ -160,8 +143,8 @@ img.img-fluid.project-img{
 /* Contact form styling*/
 #contact-form{
     height:100%;
-    padding-top:3vh;
-    padding-bottom:3vh;
+    padding-top:80px;
+    padding-bottom:80px;
     background-color: #1d84b5;
     color:white;
     justify-content: space-evenly;
@@ -189,4 +172,18 @@ img.img-fluid.project-img{
     background-color: white;
     color:#0a2239 ;
     transition: 0.2s;
+}
+
+/* Media query to add padding to the bottom of the about section 
+and project screenshots on tablets and smaller screens */
+@media only screen and (max-width: 991px) {
+  #about{
+    padding-bottom: 80px;
+  }
+  #about-img{
+    padding-bottom:50px;
+  }
+  figure{
+    padding-bottom:50px;
+  }
 }
